mejora de logica en guardado de medicamentos a la base de datos